--- a/package.json
+++ b/package.json
@@ -1,45 +1,48 @@
 {
-  "name": "OmarMarvel",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "omar-marvel",
+  "version": "0.0.0",
+  "license": "MIT",
+  "angular-cli": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ng serve",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update",
+    "e2e": "protractor"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nomardavid/OmarMarvel.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nomardavid/OmarMarvel/issues"
-  },
-  "homepage": "https://github.com/nomardavid/OmarMarvel#readme",
-  "devDependencies": {
-    "browser-sync": "^2.18.5",
-    "browserify": "^13.1.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-environments": "^0.1.1",
-    "gulp-jshint": "^2.0.4",
-    "gulp-minify": "0.0.14",
-    "gulp-sass": "^3.0.0",
-    "gulp-uglify": "^2.0.0",
-    "jasmine": "^2.5.2",
-    "jshint": "^2.9.4",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-jasmine": "^1.1.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
-  },
+  "private": true,
   "dependencies": {
-    "angular": "^1.6.0",
-    "angular-animate": "^1.6.0",
-    "angular-aria": "^1.6.0",
-    "angular-material": "^1.1.1",
-    "angular-ui-router": "^0.3.2"
+    "@angular/common": "2.2.1",
+    "@angular/compiler": "2.2.1",
+    "@angular/core": "2.2.1",
+    "@angular/forms": "2.2.1",
+    "@angular/http": "2.2.1",
+    "@angular/platform-browser": "2.2.1",
+    "@angular/platform-browser-dynamic": "2.2.1",
+    "@angular/router": "3.2.1",
+    "bootstrap": "^4.0.0-alpha.5",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.6.23"
+  },
+  "devDependencies": {
+    "@angular/compiler-cli": "2.2.1",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.42",
+    "angular-cli": "1.0.0-beta.21",
+    "codelyzer": "~1.0.0-beta.3",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "4.0.9",
+    "ts-node": "1.2.1",
+    "tslint": "3.13.0",
+    "typescript": "~2.0.3",
+    "webdriver-manager": "10.2.5"
   }
 }
