--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
+    "ultimate-pagination": "^0.8.0",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
